--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         <div class="grid">
             <div class="product-card">
                 <div class="img-wrapper">
-                    <img src="https://images.unsplash.com/photo-1556807457-9c4f0a49434c?auto=format&fit=crop&w=600&q=80" alt="Худі">
+                    <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
                     <h3>Худі "who is QWAR"</h3>
@@ -269,7 +269,7 @@
             </div>
             <div class="product-card">
                 <div class="img-wrapper">
-                    <img src="https://images.unsplash.com/photo-1556807457-9c4f0a49434c?auto=format&fit=crop&w=600&q=80" alt="Худі">
+                    <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
                     <h3>Худі "who is QWAR"</h3>
@@ -278,7 +278,7 @@
             </div>
             <div class="product-card">
                 <div class="img-wrapper">
-                    <img src="https://images.unsplash.com/photo-1556807457-9c4f0a49434c?auto=format&fit=crop&w=600&q=80" alt="Худі">
+                    <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
                     <h3>Худі "who is QWAR"</h3>
