--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
         /* --- Контент (Магазин) --- */
         .container {
             padding: 60px 5%;
+            place-items: center;
         }
 
         .grid {
