--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
             letter-spacing: 2px;
             transition: 0.4s;
         }
+        .btn:hover {
+            background: var(--white);
+            color: var(--text-main);
+        }
 
         /* --- Контент (Магазин) --- */
         .container {
@@ -259,6 +263,60 @@
 
     <main class="container" id="shop">
         <div class="grid">
+            <div class="product-card">
+                <div class="img-wrapper">
+                    <img src="css\1.jpg" alt="Худі">
+                </div>
+                <div class="product-info">
+                    <h3>Худі "who is QWAR"</h3>
+                    <p class="product-price">2 900 ₴</p>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="img-wrapper">
+                    <img src="css\1.jpg" alt="Худі">
+                </div>
+                <div class="product-info">
+                    <h3>Худі "who is QWAR"</h3>
+                    <p class="product-price">4 100 ₴</p>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="img-wrapper">
+                    <img src="css\1.jpg" alt="Худі">
+                </div>
+                <div class="product-info">
+                    <h3>Худі "who is QWAR"</h3>
+                    <p class="product-price">3 500 ₴</p>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="img-wrapper">
+                    <img src="css\1.jpg" alt="Худі">
+                </div>
+                <div class="product-info">
+                    <h3>Худі "who is QWAR"</h3>
+                    <p class="product-price">2 900 ₴</p>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="img-wrapper">
+                    <img src="css\1.jpg" alt="Худі">
+                </div>
+                <div class="product-info">
+                    <h3>Худі "who is QWAR"</h3>
+                    <p class="product-price">4 100 ₴</p>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="img-wrapper">
+                    <img src="css\1.jpg" alt="Худі">
+                </div>
+                <div class="product-info">
+                    <h3>Худі "who is QWAR"</h3>
+                    <p class="product-price">3 500 ₴</p>
+                </div>
+            </div>
             <div class="product-card">
                 <div class="img-wrapper">
                     <img src="css\1.jpg" alt="Худі">
