--- a/index.html
+++ b/index.html
@@ -232,6 +232,17 @@
             font-size: 10px;
             color: #888;
         }
+        .product {
+            
+            background-color: var(--bg-color);
+            color: var(--text-main);
+            line-height: 1.6;
+            overflow-x: hidden;
+            font-family: 'Cormorant Garamond', serif;
+            font-size: 1.3rem;
+            margin-bottom: 5px;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -268,7 +279,7 @@
                     <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
-                    <h3>Худі "who is QWAR"</h3>
+                    <a class="product" href="product.html">Худі "who is QWAR"</a>
                     <p class="product-price">2 900 ₴</p>
                 </div>
             </div>
@@ -277,7 +288,7 @@
                     <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
-                    <h3>Худі "who is QWAR"</h3>
+                    <a class="product" href="product.html">Худі "who is QWAR"</a>
                     <p class="product-price">4 100 ₴</p>
                 </div>
             </div>
@@ -286,7 +297,7 @@
                     <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
-                    <h3>Худі "who is QWAR"</h3>
+                    <a class="product" href="product.html">Худі "who is QWAR"</a>
                     <p class="product-price">3 500 ₴</p>
                 </div>
             </div>
@@ -295,7 +306,7 @@
                     <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
-                    <h3>Худі "who is QWAR"</h3>
+                    <a class="product" href="product.html">Худі "who is QWAR"</a>
                     <p class="product-price">2 900 ₴</p>
                 </div>
             </div>
@@ -304,7 +315,7 @@
                     <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
-                    <h3>Худі "who is QWAR"</h3>
+                    <a class="product" href="product.html">Худі "who is QWAR"</a>
                     <p class="product-price">4 100 ₴</p>
                 </div>
             </div>
@@ -313,7 +324,7 @@
                     <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
-                    <h3>Худі "who is QWAR"</h3>
+                    <a class="product" href="product.html">Худі "who is QWAR"</a>
                     <p class="product-price">3 500 ₴</p>
                 </div>
             </div>
@@ -322,7 +333,7 @@
                     <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
-                    <h3>Худі "who is QWAR"</h3>
+                    <a class="product" href="product.html">Худі "who is QWAR"</a>
                     <p class="product-price">2 900 ₴</p>
                 </div>
             </div>
@@ -331,7 +342,7 @@
                     <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
-                    <h3>Худі "who is QWAR"</h3>
+                    <a class="product" href="product.html">Худі "who is QWAR"</a>
                     <p class="product-price">4 100 ₴</p>
                 </div>
             </div>
@@ -340,7 +351,7 @@
                     <img src="css\1.jpg" alt="Худі">
                 </div>
                 <div class="product-info">
-                    <h3>Худі "who is QWAR"</h3>
+                    <a class="product" href="product.html">Худі "who is QWAR"</a>
                     <p class="product-price">3 500 ₴</p>
                 </div>
             </div>
