--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QWAR — Естетика вашого гардеробу</title>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&family=Montserrat:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="icon" href="css\icon.ico">
     <style>
         :root {
             --bg-color: #fdfaf8;
@@ -363,7 +364,7 @@
         <div class="socials">
             <a href="#">Instagram</a>
             <a href="#">Pinterest</a>
-            <a href="#">TikTok</a>
+            <a href="https://www.tiktok.com/@qwaresla">TikTok</a>
         </div>
         <p class="copyright">© 2025 QWAR STUDIO. Made with Love.</p>
     </footer>
