--- a/product.html
+++ b/product.html
@@ -274,7 +274,7 @@
     <div id="noise-container"></div>
 
     <header>
-        <a href="index.html" class="logo">QWAR//</a>
+        <a href="index.html" class="logo"><img src="css\logo.png" alt="#"></a>
         <div class="cart-status">CART(0)</div>
     </header>
 
