--- a/index.html
+++ b/index.html
@@ -40,12 +40,8 @@
         }
 
         .logo {
-            font-family: 'Archivo Black', sans-serif;
-            font-size: clamp(24px, 5vw, 35px);
-            text-decoration: none;
-            color: var(--text-main);
-            letter-spacing: -2px;
-            text-transform: uppercase;
+            width: 100px;
+            height: auto;
         }
         .bnt_header{
             text-decoration: none;
@@ -74,29 +70,39 @@
         /* --- Hero --- */
         .hero {
             height: 80vh;
+            margin: 20px;
+            border: var(--border-heavy);
+            display: flex;
+            flex-direction: column; /* Розташовуємо блоки один під одним */
+            background: none; /* Прибираємо загальний фон */
+        }
+
+/* Верхня рожева частина */
+        .hero-top {
+            flex: 1; /* Займає 50% висоти */
+            background: #fa9cc8;
             display: flex;
             align-items: center;
             justify-content: center;
-            margin: 20px;
-            border: var(--border-heavy);
-            background: var(--white);
+            border-bottom: var(--border-heavy); /* Лінія розділу */
         }
 
-        .hero-content {
+/* Нижня біла частина */
+        .hero-bottom {
+            flex: 1; /* Займає 50% висоти */
+            background: #ffffff;
             display: flex;
-            flex-direction: column;
             align-items: center;
-            width: 100%;
+            justify-content: center;
         }
 
-        .hero-logo {
+        .hero-logo {    
             width: 90%;
             max-width: 700px;
             height: auto;
-            display: block;
         }
 
-        .btn {
+        .btn {  
             display: inline-block;
             padding: clamp(12px, 3vw, 15px) clamp(30px, 5vw, 40px);
             background: var(--text-main);
@@ -108,22 +114,12 @@
             border: var(--border-heavy);
             box-shadow: 6px 6px 0px #ccc;
             transition: 0.2s;
-            margin-top: -20px;
+    /* Прибираємо margin-top: -20px, щоб кнопка була рівно по центру */
         }
 
-        .btn:hover {
-            display: inline-block;
-            padding: clamp(12px, 3vw, 15px) clamp(30px, 5vw, 40px);
+        .btn:hover {    
             background: #ffffff;
             color: #000000;
-            text-decoration: none;
-            text-transform: uppercase;
-            font-weight: 900;
-            font-size: clamp(14px, 3vw, 18px);
-            border: var(--border-heavy);
-            box-shadow: 6px 6px 0px #ccc;
-            transition: 0.2s;
-            margin-top: -20px;
         }
 
         /* --- Магазин --- */
@@ -138,7 +134,7 @@
         }
 
         .product-card {
-            background: var(--white);
+            background: #fa9cc8;
             padding: 20px;
             transition: 0.3s;
         }
@@ -181,7 +177,8 @@
 
         /* --- Footer --- */
         footer { background: #000; color: #fff; padding: 60px 5%; text-align: center; }
-        .footer-logo { font-family: 'Archivo Black'; font-size: clamp(2.5rem, 10vw, 5rem); border-bottom: 10px solid #fff; display: inline-block; margin-bottom: 30px; }
+        .footer-logo { font-family: 'Archivo Black'; font-size: clamp(2.5rem, 10vw, 5rem); border-bottom: 10px solid #fff; display: inline-block; margin-bottom: 30px;}
+        .footer-logo-img{margin-bottom: 40px;}
         .socials a { margin: 5px; color: #fff; text-decoration: none; font-size: 10px; border: 1px solid #fff; padding: 5px 8px; display: inline-block; }
 
         #snow-container { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 9999; }
@@ -192,7 +189,7 @@
 <body>
     <div id="snow-container"></div>
     <header>
-        <a href="index.html" class="logo">QWAR//</a>
+        <a href="index.html" ><img class="logo" src="css\logo.png" alt="#"></a>
         <nav>
             <a class="bnt_header" href="#">Shop</a>
             <a class="bnt_header" href="#">About</a>
@@ -201,8 +198,10 @@
     </header>
 
     <section class="hero">
-        <div class="hero-content">
-            <img src="css\bg_logo.png" alt="QWAR" class="hero-logo">
+        <div class="hero-top">
+            <img src="css\bg_logo1.png" alt="QWAR" class="hero-logo">
+        </div>
+        <div class="hero-bottom">
             <a href="#shop" class="btn">Go Shopping</a>
         </div>
     </section>
@@ -212,33 +211,33 @@
             <div class="product-card">
                 <div class="img-wrapper"><img src="css/1.jpg" alt="Худі"></div>
                 <a class="product-link" href="product.html">WHO_IS_QWAR_HOODIE</a>
-                <p>2 900 ₴</p>
+                <p>2 900 UAH</p>
             </div>
             <div class="product-card">
                 <div class="img-wrapper"><img src="css/1.jpg" alt="Худі"></div>
                 <a class="product-link" href="product.html">VOID_TECH_WEAR</a>
-                <p>4 100 ₴</p>
+                <p>4 100 UAH</p>
             </div>
             <div class="product-card">
                 <div class="img-wrapper"><img src="css/1.jpg" alt="Худі"></div>
                 <a class="product-link" href="product.html">WHO_IS_QWAR_HOODIE</a>
-                <p>2 900 ₴</p>
+                <p>2 900 UAH</p>
             </div>
             <div class="product-card">
                 <div class="img-wrapper"><img src="css/1.jpg" alt="Худі"></div>
                 <a class="product-link" href="product.html">VOID_TECH_WEAR</a>
-                <p>4 100 ₴</p>
+                <p>4 100 UAH</p>
             </div>
             <div class="product-card">
                 <div class="img-wrapper"><img src="css/1.jpg" alt="Худі"></div>
                 <a class="product-link" href="product.html">VOID_TECH_WEAR</a>
-                <p>4 100 ₴</p>
+                <p>4 100 UAH</p>
             </div>
         </div>
     </main>
 
     <footer>
-        <span class="footer-logo">QWAR//</span>
+        <img class="footer-logo-img" src="css\logo_footer.png" alt="#">
         <div class="socials">
             <a href="#">INSTAGRAM</a>
             <a href="#">TIKTOK</a>
