--- a/index.html
+++ b/index.html
@@ -176,9 +176,9 @@
         }
 
         /* --- Footer --- */
-        footer { background: #000; color: #fff; padding: 60px 5%; text-align: center; }
+        .footer { background: #000; color: #fff; padding: 60px 5%; text-align: center; }
         .footer-logo { font-family: 'Archivo Black'; font-size: clamp(2.5rem, 10vw, 5rem); border-bottom: 10px solid #fff; display: inline-block; margin-bottom: 30px;}
-        .footer-logo-img{margin-bottom: 40px;}
+        .footer-logo-img{margin-bottom: 20px; width: 250px; height: auto;}
         .socials a { margin: 5px; color: #fff; text-decoration: none; font-size: 10px; border: 1px solid #fff; padding: 5px 8px; display: inline-block; }
 
         #snow-container { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 9999; }
