--- a/product.html
+++ b/product.html
@@ -73,12 +73,8 @@
         }
 
         .logo {
-            font-family: 'Archivo Black', sans-serif;
-            font-size: 30px;
-            text-decoration: none;
-            color: #000;
-            letter-spacing: -2px;
-            text-transform: uppercase;
+            width: 100px;
+            height: auto;
         }
 
         .cart-status {
@@ -247,20 +243,10 @@
         }
 
         /* --- Footer --- */
-        footer {
-            background: #000;
-            color: #fff;
-            padding: 60px 5%;
-            text-align: center;
-        }
-
-        .footer-logo {
-            font-family: 'Archivo Black', sans-serif;
-            font-size: 3rem;
-            border-bottom: 6px solid #fff;
-            display: inline-block;
-            margin-bottom: 20px;
-        }
+        footer { background: #000; color: #fff; padding: 60px 5%; text-align: center; }
+        .footer-logo { font-family: 'Archivo Black'; font-size: clamp(2.5rem, 10vw, 5rem); border-bottom: 10px solid #fff; display: inline-block; margin-bottom: 30px;}
+        .footer-logo-img{margin-bottom: 20px; width: 250px; height: auto;}
+        .socials a { margin: 5px; color: #fff; text-decoration: none; font-size: 10px; border: 1px solid #fff; padding: 5px 8px; display: inline-block; }
 
         @media (max-width: 900px) {
             .product-container { grid-template-columns: 1fr; margin: 10px; }
@@ -274,7 +260,7 @@
     <div id="noise-container"></div>
 
     <header>
-        <a href="index.html" class="logo"><img src="css\logo.png" alt="#"></a>
+        <a href="index.html"><img class="logo" src="css\logo.png" alt="#"></a>
         <div class="cart-status">CART(0)</div>
     </header>
 
@@ -316,8 +302,13 @@
     </div>
 
     <footer>
-        <span class="footer-logo">QWAR//</span>
-        <p style="font-size: 10px; opacity: 0.5; margin-top: 10px;">EST. 2025. NO RULES. JUST STYLE.</p>
+        <img class="footer-logo-img" src="css\logo_footer.png" alt="#">
+        <div class="socials">
+            <a href="#">INSTAGRAM</a>
+            <a href="#">TIKTOK</a>
+            <a href="#">FACEBOOK</a>
+        </div>
+        <p style="margin-top: 40px; font-size: 10px; opacity: 0.5;">EST. 2025. DESIGNED FOR THE STREETS.</p>
     </footer>
 
     <script>
