--- a/product.html
+++ b/product.html
@@ -99,7 +99,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            background: #f0f0f0;
+            background: #fa9cc8;
             cursor: zoom-in;
         }
 
