--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <a href="index.html" ><img class="logo" src="css\logo.png" alt="#"></a>
         <nav>
             <a class="bnt_header" href="#">Shop</a>
-            <a class="bnt_header" href="#">About</a>
+            <a class="bnt_header" href="about.html">About</a>
             <a class="bnt_header" href="#">Cart (0)</a>
         </nav>
     </header>
