--- a/product.html
+++ b/product.html
@@ -306,7 +306,7 @@
         <div class="socials">
             <a href="#">INSTAGRAM</a>
             <a href="#">TIKTOK</a>
-            <a href="#">FACEBOOK</a>
+            <a href="#">TELEGRAM</a>
         </div>
         <p style="margin-top: 40px; font-size: 10px; opacity: 0.5;">EST. 2025. DESIGNED FOR THE STREETS.</p>
     </footer>
