--- a/shop.html
+++ b/shop.html
@@ -19,8 +19,9 @@
             font-family: 'Space Mono', monospace;
             background-color: var(--bg-color);
             color: var(--text-main);
-            padding: 10px; /* Мінімальний відступ для мобільних */
+            padding: 0px; /* Мінімальний відступ для мобільних */
             line-height: 1.2;
+            margin: 0 0;
         }
 
         .checkout-container {
@@ -97,6 +98,11 @@
             box-shadow: 6px 6px 0px #000;
             transform: translate(-3px, -3px);
         }
+/* --- Footer --- */
+         footer { background: #000; color: #fff; padding: 60px 5%; text-align: center; }
+        .footer-logo { font-family: 'Archivo Black'; font-size: clamp(2.5rem, 10vw, 5rem); border-bottom: 10px solid #fff; display: inline-block; margin-bottom: 30px;}
+        .footer-logo-img{margin-bottom: 20px; width: 250px; height: auto;}
+        .socials a { margin: 5px; color: #fff; text-decoration: none; font-size: 10px; border: 1px solid #fff; padding: 5px 8px; display: inline-block; }
 
         /* Адаптація для дуже малих екранів */
         @media (max-width: 480px) {
@@ -142,6 +148,16 @@
             <button type="submit" class="btn-submit">CONFIRM ORDER</button>
         </form>
     </div>
+
+    <footer>
+        <img class="footer-logo-img" src="css\logo_footer.png" alt="#">
+        <div class="socials">
+            <a href="#">INSTAGRAM</a>
+            <a href="#">TIKTOK</a>
+            <a href="#">TELEGRAM</a>
+        </div>
+        <p style="margin-top: 40px; font-size: 10px; opacity: 0.5;">EST. 2025. DESIGNED FOR THE STREETS.</p>
+    </footer>
 
     <script>
         document.getElementById('orderForm').onsubmit = function(e) {
