--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
     <header>
         <a href="index.html" ><img class="logo" src="css\logo.png" alt="#"></a>
         <nav>
-            <a class="bnt_header" href="#">Shop</a>
+            <a class="bnt_header" href="#shop">Shop</a>
             <a class="bnt_header" href="about.html">About</a>
-            <a class="bnt_header" href="#">Cart (0)</a>
+            <a class="bnt_header" href="cart.html">Cart (0)</a>
         </nav>
     </header>
 
