--- a/product.html
+++ b/product.html
@@ -288,7 +288,7 @@
                 </div>
             </div>
 
-            <a href="shop.html" class="btn-glitch">Add to Bag</a>
+            <a href="cart.html" class="btn-glitch">Add to Bag</a>
             
             <p style="font-size: 10px; opacity: 0.5; text-align: center; text-transform: uppercase;">
                 Free shipping over 5000 ₴ / Worldwide delivery
