--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
         <nav>
             <a class="bnt_header" href="index.html#shop">Shop</a>
             <a class="bnt_header active" href="about.html">About</a>
-            <a class="bnt_header" href="shop.html">Cart (0)</a>
+            <a class="bnt_header" href="cart.html">Cart (0)</a>
         </nav>
     </header>
 
